Add a tool called blcheck that make a simple sanity check of stories in an org-file

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,5 +9,8 @@ cutest:
 
 -include cutest/src/cutest.mk
 
+blcheck: blcheck.c story.c
+	$(CC) -o $@ $^ -D"call(func)=func" -O2
+
 clean::
-	$(Q)$(RM) -f *~
+	$(Q)$(RM) -f *~ blcheck
