Add coverage from cutest, and inproved a few measurements

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,7 @@ cutest:
 	git clone https://github.com/aiobofh/cutest.git
 
 -include cutest/src/cutest.mk
+-include cutest/src/coverage.mk
 
 blcheck: blcheck.c story.c
 	$(CC) -o $@ $^ -D"call(func)=func" -O2
