Add two prototype tools for reading sprints and generate burn down data

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,9 @@ all:
 	$(Q)${MAKE} -s cutest && \
 	${MAKE} -s check && \
 	${MAKE} -s blcheck && \
-	${MAKE} -s blsum
+	${MAKE} -s blsum && \
+	${MAKE} -s blsprints && \
+	${MAKE} -s blburn
 
 cutest:
 	$(Q)git clone "https://github.com/aiobofh/cutest.git" -q
@@ -20,5 +22,11 @@ blcheck: blcheck.c date.c story.c backlog.c
 blsum: blsum.c date.c story.c backlog.c
 	$(CC) -o $@ $^ -D"call(func)=func" -O2
 
+blsprints: blsprints.c date.c sprint.c
+	$(CC) -o $@ $^ -D"call(func)=func" -O2
+
+blburn: blburn.c date.c sprint.c story.c backlog.c
+	$(CC) -o $@ $^ -D"call(func)=func" -O2
+
 clean::
-	$(Q)$(RM) -rf *~ blcheck cutest
+	$(Q)$(RM) -rf *~ blcheck blsum blsprints blburn cutest
