Remove the need for the cutest call() macro to match cutest development

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,4 +29,4 @@ blburn: blburn.c date.c sprint.c story.c backlog.c
 	$(CC) -o $@ $^ -D"call(func)=func" -O2
 
 clean::
-	$(Q)$(RM) -rf *~ blcheck blsum blsprints blburn cutest
+	$(Q)$(RM) -rf *~ blcheck blsum blsprints blburn
