Add automatic build of src folder from the test-folder

--- a/test/Makefile
+++ b/test/Makefile
@@ -15,6 +15,9 @@ CFLAGS=-Wall -pedantic -std=c99 -I.
 TTMPROOT=/tmp/
 TSRCROOT=../src/
 
+check::
+	${MAKE} --no-print-directory -C ../src/
+
 #
 # Depend on the Tarsio make system
 #
