Change temporary folder to not lock it self between users

--- a/test/Makefile
+++ b/test/Makefile
@@ -12,7 +12,7 @@ CFLAGS=-Wall -pedantic -std=c99 -I.
 #
 # Configure Tarsio
 #
-TTMPROOT=/tmp/tarsio/${USER}/
+TTMPROOT=/tmp/${USER}/tarsio/
 TSRCROOT=../src/
 
 check::
